# jpxs-launcher

./: README.md  build.sh  index.html  package.json  pnpm-lock.yaml  run.sh
.github/workflows/: build.yml  mac.yml  main.yml  release.yml
src/: App.css  App.tsx  InstanceManager.ts  SettingsManager.ts  Sidebar.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  instance_manager.rs  lib.rs  main.rs  settings.rs
src/components/: InstanceComponent.tsx  OpenSteamDialog.tsx  Server.tsx  Sidebar.tsx
src/pages/: 404.tsx  Home.tsx  Instances.tsx  PlayerSearch.tsx  ServerList.tsx  Settings.tsx
